build/apps/kube-prometheus-stack/base/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.40.180
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: http
  selector:
    app: grafana
  sessionAffinity: None
  type: LoadBalancer
